@@ -29,7 +29,7 @@ PROJECT_NUMBER         = @VERSION@
 # If a relative path is entered, it will be relative to the location 
 # where doxygen was started. If left blank the current directory will be used.
 
-OUTPUT_DIRECTORY       = doxygen
+OUTPUT_DIRECTORY       = @WITH_APIDOCS_TARGET@
 
 # The OUTPUT_LANGUAGE tag is used to specify the language in which all 
 # documentation generated by doxygen is written. Doxygen will use this 
@@ -277,7 +277,6 @@ INPUT                  = \
 	./lib/cpio.c \
 	./lib/cpio.h \
 	./lib/db1.c \
-	./lib/db2.c \
 	./lib/db3.c \
 	./lib/depends.c \
 	./lib/depends.h \
@@ -324,6 +323,7 @@ INPUT                  = \
 	./lib/verify.c \
 	./rpmio/base64.c \
 	./rpmio/base64.h \
+	./rpmio/digest.c \
 	./rpmio/macro.c \
 	./rpmio/md5.c \
 	./rpmio/rpmlog.c \
