@@ -1,6 +1,6 @@
-%define	with_python_subpackage	1
-%define	with_bzip2		1
-%define	with_apidocs		1
+%define	with_python_subpackage	@WITH_PYTHON_SUBPACKAGE@
+%define	with_bzip2		@WITH_BZIP2@
+%define	with_apidocs		@WITH_APIDOCS@
 
 # XXX legacy requires './' payload prefix to be omitted from rpm packages.
 %define	_noPayloadPrefix	1
@@ -10,7 +10,7 @@
 
 Summary: The Red Hat package management system.
 Name: rpm
-%define version 4.1
+%define version @VERSION@
 Version: %{version}
 Release: 0.15
 Group: System Environment/Base
@@ -274,7 +274,7 @@ fi
 %files devel
 %defattr(-,root,root)
 %if %{with_apidocs}
-%doc apidocs
+%doc @WITH_APIDOCS_TARGET@
 %endif
 %{__prefix}/include/rpm
 %{__prefix}/lib/librpm.a
@@ -307,6 +307,7 @@ fi
 - python: bind package removal (#21274).
 - autoconfigure building python bindings.
 - autoconfigure generating rpm API doco rpm-devel package.
+- fix: don't fdFree in rpmVerifyScript, rpmtransFree does already.
 
 * Thu Nov 30 2000 Jeff Johnson <jbj@redhat.com>
 - add missing headerFree for legacy signature header.
